fix some bug
添加测试类